# dnn

./: AInfer.cpp  AInfer.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  IInfer.h  InferConfig.h  InferDNN.vcxproj  InferDNN.vcxproj.filters  InferLibtorch.cpp  InferLibtorch.h  InferManager.cpp  InferManager.h  InferNothing.cpp  InferNothing.h  InferONNX.cpp  InferONNX.h  README.md  dnn.vcxproj  dnn.vcxproj.filters  main.cpp  packages.config
examples/: config.yaml
x64/Debug/: InferDNN.exe.recipe
x64/Debug/InferDNN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  InferDNN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
x64/Release/: InferDNN.exe.recipe  InferDNN.iobj  InferDNN.ipdb
x64/Release/InferDNN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  InferDNN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
